lab1/Test/L1-A-9-83.cmm
int v [ 1965710932 ] , _8 

;
float ;
int ;
struct I9XwAE0m2L {
  int RHMKD0OOvwThH4 , = GKwTsxOmzKN6qglHTeXn ;
};
struct z6832qm9lo8AX5Y nh082bUNoMrQ3 ( int pugxRD8y9yI3ekeZ 
  , struct {
  int g ;
}Cr7SFSf_W6pMS ) {
  if ( E   return kngs4xn8aoy5373Jn4 && WLxspoqBv3 
    != GadMnQFiS6 * ! - XW [ PO4GoR = ZibuE = A || uX_Rx 
    == _vlGB + DsFKT4B73YCOzTc9 ( GFZSnm7aN0nChB = n6GP5OcmTj7_D4kr 
    = t3deGpGBpnTxGnmRcE || TYRrv7ctWfgo >= gcL5DmI1QpSOMqq8 
    / ( q2z2Z7UH_Jp1y70wzk5F = vGLZJFBm8H < ( tPJOnEmqj5IP 
    < ! QSuqtAht7RyPFS ( UtkmJ1oke7rDKSTiB6 , H ) . lyojbXudtYtbXvf45TZ 
    . qJhjeFNHAl3F_l <= ! ! v1o_Xcd19aU2FqMC2Z3 . J8NnCyk 
    ) / EvT && G23KYU > - 579779039 <= K8VzWh ) - 1648260043.988638926 
    . o1Epy2OtKSq1BlcDaQ ) / - - sGM3qfBaRZAzVu ( ) ] 
    ;

}
int ;
int ;
int odqVePJwTg0LRHpYPSC ( ) {
  if ( AYkrbhGEy0q )   JGyC ;
else   if FT0WXljekYeT_lnePH ) {
    if ( TIsiBh )     PUwaKqDHW ;
else     OBac6GkgBenhgf ;

  }

}
int ;
int ;
int ;
int w3NQfyrKZ ( ) {
  while ( w4MaN6ohQlqR3cofz7 )   jU4 ;

}
int ;
